@@ -1,6 +1,5 @@
 package ru.hogwarts.school.test.tests;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -9,15 +8,13 @@ import org.springframework.test.web.servlet.MockMvc;
 import ru.hogwarts.school.controller.FacultyController;
 import ru.hogwarts.school.model.Faculty;
 import ru.hogwarts.school.service.FacultyService;
-
+import java.util.Arrays;
 import java.util.List;
-
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@WebMvcTest(FacultyController.class)
+@WebMvcTest(controllers = FacultyController.class)
 class FacultyControllerWebMvcTest {
 
     @Autowired
@@ -26,52 +23,44 @@ class FacultyControllerWebMvcTest {
     @MockBean
     private FacultyService facultyService;
 
-    private Faculty testFaculty;
-
-    @BeforeEach
-    void setUp() {
-        testFaculty = new Faculty();
-        testFaculty.setId(1L);
-        testFaculty.setName("Gryffindor");
-        testFaculty.setColor("Red");
-    }
-
     @Test
-    void testGetByColor() throws Exception {
-        when(facultyService.getByColor("Red"))
-                .thenReturn(List.of(testFaculty));
+    void getFaculty_ShouldReturnFaculty() throws Exception {
+        Faculty faculty = new Faculty("Gryffindor", "Red");
+        faculty.setId(1L);
 
-        mockMvc.perform(get("/faculty/by-color")
-                        .param("color", "Red"))
+        when(facultyService.getFaculty(1L)).thenReturn(faculty);
+
+        mockMvc.perform(get("/faculty/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].name").value("Gryffindor"))
-                .andExpect(jsonPath("$[0].color").value("Red"));
+                .andExpect(jsonPath("$.id").value(1))
+                .andExpect(jsonPath("$.name").value("Gryffindor"))
+                .andExpect(jsonPath("$.color").value("Red"));
     }
 
     @Test
-    void testGetByName() throws Exception {
-        when(facultyService.getByName("Gryffindor"))
-                .thenReturn(List.of(testFaculty));
+    void getFacultiesByColor_ShouldReturnFaculties() throws Exception {
+        Faculty faculty1 = new Faculty("Gryffindor", "Red");
+        List<Faculty> faculties = Arrays.asList(faculty1);
 
-        mockMvc.perform(get("/faculty/by-name")
-                        .param("name", "Gryffindor"))
+        when(facultyService.getFacultiesByColor("Red")).thenReturn(faculties);
+
+        mockMvc.perform(get("/faculty/color/Red"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].name").value("Gryffindor"))
-                .andExpect(jsonPath("$[0].color").value("Red"));
+                .andExpect(jsonPath("$.length()").value(1))
+                .andExpect(jsonPath("$[0].name").value("Gryffindor"));
     }
 
     @Test
-    void testSearchByNameOrColor() throws Exception {
-        when(facultyService.findByNameOrColor("Red"))
-                .thenReturn(List.of(testFaculty));
+    void searchFaculties_ShouldReturnFaculties() throws Exception {
+        Faculty faculty1 = new Faculty("Gryffindor", "Red");
+        List<Faculty> faculties = Arrays.asList(faculty1);
+
+        when(facultyService.searchFaculties("Gryffindor", null)).thenReturn(faculties);
 
         mockMvc.perform(get("/faculty/search")
-                        .param("nameOrColor", "Red"))
+                        .param("name", "Gryffindor"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].name").value("Gryffindor"))
-                .andExpect(jsonPath("$[0].color").value("Red"));
+                .andExpect(jsonPath("$.length()").value(1))
+                .andExpect(jsonPath("$[0].name").value("Gryffindor"));
     }
 }
